Updated front page links (animations, minor layout issues, more)

--- a/web/css/main/header.less
+++ b/web/css/main/header.less
@@ -30,8 +30,8 @@
         top:             2px;
         color:           #FFFFFF;
         text-shadow:     1px 1px 4px black;
-        transition:      all .125s;
-        transform:       rotate(3deg);
+        transition:      top .1s, text-shadow .1s;
+        //transform:       rotate(3deg);
     }
 
     div {
